# c7fetch-py

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.agents/: CLAUDE.md  PLAN.md  REVIEW.md  TODO-001.md  TODO-002.md
.agents/c7_api_info/: api_by_curl.md  fetch_response_sample.json5  search_response_sample.json5
c7fetch/c7/: api.py
c7fetch/cli/: common.py  config.py  fetch.py  main.py  review.py  search.py  settings.py  typer_util.py
c7fetch/table/: __init__.py
tests/: test_cli.py
