[project]
name = "c7fetch-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.5",
    "typer>=0.19.1",
    "rich>=13.7.1",
    "pathvalidate>=3.2.0",
]


# scripts

[project.scripts]
c7fetch = "c7fetch.cli.main:app"

[dependency-groups]
dev = [
    "ruff>=0.13.1",
    "pytest>=8.3.0",
    "responses>=0.25.0",
]


[tool.uv.build-backend]
module-name = "c7fetch"
module-root = ""

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
